<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    tools:context="com.example.sarvesh.takeajob.ProfileActivity"
    android:weightSum="1">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_margin="20dp"
        android:layout_weight="0.02"
        android:src="@drawable/default_profile" />

    <TextView
        android:id="@+id/proUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="username"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/proName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name Example"
        android:gravity="center"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        android:layout_weight="0.12" />

    <TextView
        android:id="@+id/proEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="example@takeajob.com"
        android:gravity="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="181dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_weight="0.09">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="00"
                android:textSize="18sp"
                android:textColor="#616161" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_grad_cap"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/proExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="00"
                android:textSize="18sp"
                android:textColor="#616161" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="yrs"
                android:textSize="18sp"
                android:textColor="#616161" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brief_case"
            android:text="@string/icon_brief"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="Designation"
            android:id="@+id/proDesignation"
            android:textColor="#616161"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_contact"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/proContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="9999999999"
            android:textColor="#616161"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/building"
            android:text="@string/icon_building"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="Company Name"
            android:id="@+id/proCompany"
            android:textColor="#616161"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>
