<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sarvesh.takeajob.AboutUsActivity"
    android:weightSum="1">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/main_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="takeajob"
            android:textColor="@android:color/background_dark"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="We specialize in integrating employer and jobseekers"
            android:layout_marginBottom="10dp"
            android:textSize="14sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="6">

            <android.support.design.widget.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="4"
                android:background="@android:color/background_light"
                android:hint="Email Address"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:id="@+id/email_input"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#c62828"
                android:fadingEdgeLength="2dp"
                android:requiresFadingEdge="horizontal"
                android:id="@+id/subscribe"
                android:text="Subscribe"
                android:textStyle="bold"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:orientation="vertical"
        android:background="#ffffff"
        android:padding="10dp"
        android:weightSum="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="About Company Page"
            android:padding="5sp"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:gravity="center"
            android:id="@+id/signal"
            android:text="@string/icon_signal"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="60sp"
            android:layout_weight="0.46" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/globe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/icon_globe"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="80sp" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.34"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mission: "
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Our mission is to easily integrate employees and jobseekers and removing complexities." />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:text="Vision: "
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Our mission is to make it more perfect" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.58"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="SERVICES"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="What we offer"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/power"
            android:text="@string/icon_power"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="80sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="POWER"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="Easy Integration"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">


        <TextView
            android:id="@+id/heart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/icon_heart"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="80sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="AVAILABILITY"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="Employers and JobSeekers"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff"
        android:padding="10dp"
        android:weightSum="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/icon_brief"
            android:padding="5sp"
            android:id="@+id/brief"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="80sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="JOB DONE"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="User Friendly"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:id="@+id/leaf"
            android:text="@string/icon_leaf"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="80sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="GREEN"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="We Support Clean India"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff"
        android:padding="10dp"
        android:weightSum="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/icon_certi"
            android:id="@+id/certi"
            android:padding="5sp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="80sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="CERTIFIED"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="Certified by @sscompanies"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/icon_hard_work"
            android:id="@+id/hard_work"
            android:padding="5sp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="80sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="HARD WORK"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="To provide easy availability and integration"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>
